# lfc-00009

./: .gitignore  pyproject.toml  requirements.txt  signin_report.html
sample_data/: enroll.csv  enroll_errors.csv  rules.json  rules_bom.json  signin.csv  signin_errors.csv
scripts/: e2e_notification.py  make_bom_file.py  make_dirty_old_db.py  test_notification.py
signcheck/: cli.py  config.py  constants.py  csv_utils.py  export_service.py  handoff.py  handoff_service.py  import_service.py  matcher.py  models.py  notifier.py  reconcile.py  server.py  storage.py
test_output/: results.csv  results.json  results.xlsx  stats.csv  stats.json  stats.xlsx
test_output2/: results.json  results.xlsx  stats.json  stats.xlsx
tests/: test_acceptance.py  test_handoff.py  test_services.py
