[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "signcheck"
version = "1.0.0"
description = "线下培训签到对账 CLI"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "openpyxl>=3.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
signcheck = "signcheck.cli:main"
